Update file index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/Project2-29-7-2024/access/css/reset.css">
   <link rel="stylesheet" href="/Project2-29-7-2024/access/css/base.css">
   <link rel="stylesheet" href="/Project2-29-7-2024/access/css/styles.css">
-  <link rel="website icon" type="jpg" href="https://i.pinimg.com/originals/5d/d1/3a/5dd13a92c2e1990e4e51402d74844f85.png"> />
+  <link rel="website icon" type="jpg" href="https://i.pinimg.com/originals/5d/d1/3a/5dd13a92c2e1990e4e51402d74844f85.png"> 
   <title>Project-2</title>
 </head>
 
